--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.scss
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.scss
@@ -11,6 +11,7 @@
   font-size: 0.8rem;
   line-height: 1rem;
 }
+
 .edit_dataset {
   border: 1px solid #dddddd;
   border-radius: 4px;
@@ -18,4 +19,11 @@
   padding: 3px;
   height: 2rem;
   font-size: 1rem;
+}
+
+#no-validation-box{
+  color: lightgray;
+  height: 70%;
+  display: flex;
+  align-items:center;
 }
