--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -97,7 +97,7 @@
         <p-panel header="Reference" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
-                   pTooltip="The data which is to be used as a reference in the validation. The 'Data' will be compared against this reference."
+                   pTooltip="Select which dataset chosen in the 'Data' component should be marked as spatial and temporal reference."
                    tooltipPosition="bottom">
               <span class="pi pi-question-circle"></span>
             </label>
@@ -105,7 +105,13 @@
 
           <!--             spatial reference-->
           <div class="p-pt-2">
-            <label for="spatial-reference" class="p-mb-4">Spatial reference:</label>
+            <label for="spatial-reference"
+                   class="p-mb-4"
+                   pTooltip="Choose the spatial reference dataset. If the ISMN dataset belongs to the dataset pool, it has to be chosen as the spatial reference."
+                   tooltipPosition="bottom">
+              <span class="pi pi-question-circle"></span>
+              Spatial reference
+            </label>
             <qa-validation-reference
               id="spatial-reference"
               #spatialReference
@@ -116,7 +122,13 @@
 
           <!--             temporal reference-->
           <div>
-            <label for="temporal-reference" class="p-mb-4">Temporal reference:</label>
+            <label for="temporal-reference"
+                   class="p-mb-4"
+                   pTooltip="Choose the temporal reference dataset. Please note, that we do not recommend selecting ISMN."
+                   tooltipPosition="bottom">
+              <span class="pi pi-question-circle"></span>
+              Temporal reference
+            </label>
             <qa-validation-reference
               id="temporal-reference"
               #temporalReference
