--- a/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
+++ b/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid  p-align-center p-pt-2">
-  <div class="p-col">
+  <div class="p-col" style="max-width: 100%">
     <span class="p-float-label p-mb-4 p-mt-3" *ngIf="selectionModel$|async">
     <p-dropdown id="datasetSelector"
                 (onChange)="onDatasetChange()"
@@ -7,7 +7,7 @@
                 [ngModel]="verifyChosenValue()|async"
                 (ngModelChange)="selectionModel$.next($event)"
                 optionLabel="datasetModel.selectedDataset.pretty_name"
-                [style]="{'width': '100%'}">
+                [style]="{'width': '100%', 'max-width': '100%'}">
       <ng-template let-item pTemplate="item">
         <div (mouseover)="onHoverOverDataset(item, true)"
              (mouseleave)="onHoverOverDataset(item, false)"
