--- a/UI/src/app/modules/user/login/login.component.html
+++ b/UI/src/app/modules/user/login/login.component.html
@@ -1,36 +1,34 @@
-<main class="container-fluid">
-  <div class="center">
-    <div class="p-grid">
+<div class="center" style="max-width: 100%">
+  <div class="p-grid">
+    <div class="p-col" style="max-width: 15rem">
+      <form [formGroup]="loginForm" class="text-center" (ngSubmit)="onSubmit()">
+        <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Please sign in</h1>
 
-      <div class="p-col" style="max-width: 15rem">
-        <form [formGroup]="loginForm" class="text-center" (ngSubmit)="onSubmit()">
-          <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Please sign in</h1>
-
-          <div class="p-fluid">
+        <div class="p-fluid">
           <span class="p-float-label p-mb-5 p-mt-4">
             <input pInputText id="usernameInput" type="text" formControlName="username">
             <label for="usernameInput">Username</label>
           </span>
-          </div>
+        </div>
 
 
-          <div class="p-fluid">
+        <div class="p-fluid">
           <span class="p-float-label p-mb-5">
           <input pPassword type="password"
                  formControlName="password" [feedback]="false" id="passwordInput">
           <label for="passwordInput">Password</label>
         </span>
-          </div>
+        </div>
 
-          <button pButton
-                  type="submit"
-                  label="Sign in">
-          </button>
+        <button pButton
+                type="submit"
+                label="Sign in">
+        </button>
 
-          <div class="p-mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
-        </form>
-      </div>
+        <div class="p-mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
+      </form>
     </div>
   </div>
-  <qa-scroll-to-top></qa-scroll-to-top>
-</main>
+</div>
+
+
