--- a/UI/src/app/pages/login-page/login-page.component.html
+++ b/UI/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,4 @@
-<app-login></app-login>
+<main class="container-fluid">
+  <app-login></app-login>
+  <qa-scroll-to-top></qa-scroll-to-top>
+</main>
