logging in form shows up if a non-logged in user tries to start a validation

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -249,5 +249,11 @@
                           [isThereValidation]="isThereValidation"
                           (startValidation)="startValidation(false)">
   </qa-existing-validation>
+  <p-dialog id="log-in" [modal]="true" [(visible)]="logInToValidate">
+    <div>
+      <app-login (loggedIn)="setLoggedIn()"></app-login>
+    </div>
+
+  </p-dialog>
 </div>
 <qa-scroll-to-top></qa-scroll-to-top>
