Change visibility of validate page (#578)
* validate page available for all users

* login component moved to another directory, so it's a separate component; page for loggin in added

* login form added to the login page

* scroll to top moved to login page

* link to set up for added

* navigateAfter input parameter added, to know if after logging in the user should be redirected or should stay at the same page

* logging in form shows up if a non-logged in user tries to start a validation

* information about not being logged in added; redirection to login and signup forms added; styling updated

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -1,4 +1,16 @@
 <div class="p-grid no-gutters" [ngClass]="{'non-scrollable': isExistingValidationWindowOpen}">
+  <div *ngIf="!(authService.authenticated|async)"
+       class="p-col-12 alert center">
+    <h5 class="p-pt-2">
+      You are not logged in!
+      You can still check validation options, but can not start a validation.
+      <a [routerLink]="'/login'" class="mt-5">Click here</a>
+      to log in or use
+      <a [routerLink]="'/signup'" class="mt-5">this form</a>
+      to register
+    </h5>
+
+  </div>
   <div class="
     p-col-12
     p-md-10 p-md-offset-1
@@ -249,5 +261,11 @@
                           [isThereValidation]="isThereValidation"
                           (startValidation)="startValidation(false)">
   </qa-existing-validation>
+  <p-dialog header="You need to be logged in to start a validation" id="log-in" [modal]="true" [(visible)]="logInToValidate">
+    <div>
+      <app-login (loggedIn)="setLoggedIn()"></app-login>
+    </div>
+
+  </p-dialog>
 </div>
 <qa-scroll-to-top></qa-scroll-to-top>
