--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -77,7 +77,7 @@
             <li *ngFor="let config of configurations; let ind = index">
 <!--              <em>Dataset {{ind + 1}}: </em>-->
               <span style="font-weight: 600">{{config.is_spatial_reference ? 0 : ind + 1}}-{{config.dataset}} ({{config.version}}, {{config.variable}}
-                {{config.variableUnit && config.variableUnit !== 'unknown' ? '[' + config.variableUnit + ']': ''}}
+                {{config.variableUnit ? '[' + config.variableUnit + ']': ''}}
                 )</span>
               <em>{{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
                 config.is_temporal_reference, config.is_scaling_reference)}}
