[units] added to the dropdown label

--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -49,7 +49,7 @@
 
 
       </p-dropdown>
-            <label for="variableSelector">Variable</label>
+            <label for="variableSelector">Variable [units]</label>
     </span>
 
   </div>
