Add units to frontend (#581)
* variable units displayed on the variable dropdown list

* units added to the validation summary

* default unit changed to n.a.; units added to the validation row

* [units] added to the dropdown label

* acquiring units from user dataset added

* displaying units in the user dataset row added

* code updated to get units from user dataset file

* migration added to include a change of default unit entry

--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -76,7 +76,9 @@
           <ol style="list-style: none">
             <li *ngFor="let config of configurations; let ind = index">
 <!--              <em>Dataset {{ind + 1}}: </em>-->
-              <span style="font-weight: 600">{{config.is_spatial_reference ? 0 : ind + 1}}-{{config.dataset}} ({{config.version}}, {{config.variable}})</span>
+              <span style="font-weight: 600">{{config.is_spatial_reference ? 0 : ind + 1}}-{{config.dataset}} ({{config.version}}, {{config.variable}}
+                {{config.variableUnit ? '[' + config.variableUnit + ']': ''}}
+                )</span>
               <em>{{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
                 config.is_temporal_reference, config.is_scaling_reference)}}
               </em><br>
