information for non-logged in user updated

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -2,12 +2,12 @@
   <div *ngIf="!(authService.authenticated|async)"
        class="p-col-12 alert center">
     <h5 class="p-pt-2">
-      You are not logged in!
-      You can still check validation options, but can not start a validation.
-      <a [routerLink]="'/login'" class="mt-5">Click here</a>
+      You are not logged in.
+      You can check validation options, but cannot start a validation.
+      <a [routerLink]="'/login'" class="mt-5">Click here</a> or on the Validate button
       to log in or use
       <a [routerLink]="'/signup'" class="mt-5">this form</a>
-      to register
+      to register.
     </h5>
 
   </div>
