email address added to the main page

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -109,6 +109,7 @@
 
         </div>
       </div>
+      If you have any questions or you would like to share your opinion with us, please email us at <b>support&nbsp;(at)&nbsp;qa4sm.eu.</b>
 
     </div>
     <div class="p-md-5">
