verifying file size added

--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.scss
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.scss
@@ -75,3 +75,9 @@ div.alert{
   animation-duration: 3s;
   animation-iteration-count: infinite;
 }
+
+.warning{
+  color: red;
+  font-weight: bold;
+  width: 80%;
+}
