File size limitations (#591)
* models updated; proper migration added

* migration updated to be consistent with recent updates

* model field name updated to better reflect what is stored there; migration updated; property added to know how much space left for the particular user

* admin panel updated; api user_view updated to take all the fields and properties into account;

* proper updates done to pass space usage information between frontend and backend

* message on the storage limit added

* verifying file size added

* function for getting file size in proper units moved to the userDatasetService, as it will be used in more than one place.

* function name changed to better express its purpose; blocking upload of a too big file added.

* progressbar added to show how much space have been used

* my-datasets page layout updated

* value in bytes removed

* file size limitation introduced in the backend

* testdata updated to include test data for upload

* testing zipped netcdf and csv added

* testing file size limit added

* layout updated

--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
@@ -14,6 +14,7 @@
         <div class="p-fluid">
           <button pButton
                   label="Select file"
+                  [disabled]="authService.currentUser.space_left === 0"
                   (click)="dialogVisible=true">
             <!--                  (click)="fileUpload.click()">-->
           </button>
@@ -34,18 +35,22 @@
 </div>
 
 <p-dialog id="user-data-form" header="Upload your own data" [(visible)]="dialogVisible">
-  <div class="p-pb-3 p-pl-0">You can upload your own data using this form. Please follow this file <a target="_blank"
-                                                                                                      [routerLink]="['/user-data-guidelines']">standard</a>
+  <div class="p-pb-3 p-pl-0">
+    You can upload your own data using this form. Please follow this file
+    <a target="_blank" [routerLink]="['/user-data-guidelines']">standard</a>
   </div>
   <div class="p-grid" style="display: flex">
 
-    <div class="center p-col-12 p-pb-0 p-pr-4">
-      <div class="form-field">
-        {{file ? file.name : "No file chosen yet."}}
+    <div class="center p-col-12 p-pb-0 p-pr-3">
+      <div
+        [ngClass]="{'form-field' : true, 'warning': isFileTooBig}"
+      >
+        {{file ? file.name : (isFileTooBig ? 'This file is too big, please choose another one. You still have ' + getTheFileSize() + ' available*'
+        : "No file chosen yet.")}}
       </div>
     </div>
 
-    <div class="center p-col-12 p-pt-0 p-pr-4">
+    <div class="center p-col-12 p-pt-1 p-pr-4">
       <div class="form-field">
         <button pButton
                 [label]="file ? 'Change file' :'Add file'"
