--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -33,7 +33,8 @@
   <p>
     <b>Step 1</b> - Choose the data you would like to validate - including the dataset name, the version of the dataset,
     and one of the soil moisture variables provided in the dataset. All the supported datasets are listed on
-    <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">datasets page here</a>.
+    <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">datasets page here</a>. Plase note,
+    that there have to be at least two datasets added, as one of them will be treated as the reference one.
   </p>
   <div>
     <img alt="dataset selection" class="scaled_image" [src]="datasetSelections">
@@ -41,7 +42,7 @@
   <p>
     <b>Step 2 [optional]</b> - Choose the criteria by which you would like to filter this dataset.
     The filters available depend on the data contained within the chosen dataset. For example,
-    you can filter the C3S data to include only data with no inconsistencies detected (flag = 0).
+    you can filter the C3S data to include only data with variable in valid geophysical range.
     Details of the filter options provided for each dataset are given on the
     <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">supported datasets page</a>. You
     can also
@@ -49,15 +50,15 @@
   </p>
   <p>
     <b>Step 3 [optional]</b> - If you want to intercompare several datasets, you can add more datasets to the validation
-    using the <b>Add dataset</b> button, up to a maximum of five. Configure the settings for the additional datasets by
+    using the <b>Add dataset</b> button, up to a maximum of six. Configure the settings for the additional datasets by
     selecting
     the respective tab and repeating steps 1 and 2 above.<br/>
   </p>
   <p class="alert alert-info">
-    <b>Intercomparison:</b> The intercomparison mode of QA4SM validates up to five satellite data sets against a common
-    reference data set. For each reference location (e.g. each ISMN station) it finds the nearest observation series in
+    <b>Intercomparison:</b> The intercomparison mode of QA4SM validates up to six satellite data sets against a common
+    spatial reference data set. For each reference location (e.g. each ISMN station) it finds the nearest observation series in
     all selected satellite products.
-    All observations series are then scaled (if selected) and temporally matched to the reference series.
+    All observations series are then scaled (if selected) and temporally matched to the temporal reference series.
     For validation only the common time stamps (that are available in all satellite products) are used to calculate
     validation metrics
     between the reference and each individual satellite product.
@@ -69,21 +70,17 @@
     <img alt="intercomparison" class="scaled_image" [src]="intercomparison">
   </div>
   <p>
-    <b>Step 4</b> - Choose the reference dataset you would like to use for the
-    validation including the dataset name, the version of the dataset, and the soil moisture variables provided in
-    the dataset.
+    <b>Step 4</b> - Choose which dataset selected for validation should be used as the spatial and temporal reference.
+    Please note, that if the ISMN dataset belongs to the pool, it is set as the spatial reference automatically and there
+    is no possibility of changing it.
   </p>
   <div>
     <img alt="reference dataset" class="scaled_image" [src]="referenceDatasetSelection">
   </div>
   <p>
-    <b>Step 5 [optional]</b> - Choose the criteria by which you would like to filter the reference data prior to
-    running the validation. The filters available depend on the data contained within the chosen dataset. For example,
-    you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
-    You can also hover your mouse pointer over the question mark next to a filter
-    to get a short explanation. <br>
+    <b>Step 5 [optional]</b> -
     <span>
-    If the reference dataset is ISMN you can also choose specific networks and/or measurements in a defined depth range.
+    If the ISMN belongs to the dataset pool you can also choose specific networks and/or measurements in a defined depth range.
     To do that you have to open an appropriate window by clicking a 'select...' link next to the filter you want to parameterised.
     </span>
   </p>
@@ -176,12 +173,13 @@
   </div>
 
   <p>
-    <b>Step 10</b> - Choose how the data (or reference) will be scaled before metrics calculation.
-    The data can be scaled to the reference (default) or vice versa.
-    Note that in an intercomparision validation (with multiple datasets), only scaling to reference
-    is possible.
+    <b>Step 10</b> - Choose how the data will be scaled before metrics calculation.
+    The data can be scaled to any dataset selected for validation.
+
     The scaling method determines how values of one dataset are mapped onto the value range of the
     other dataset for better comparability.
+
+    Note that if the chosen method is 'No scaling', there is no scaling reference drop down list available.
   </p>
   <div>
     <img alt="scaling" class="scaled_image p-mb-3" [src]="scaling">
@@ -619,7 +617,9 @@
   <p>
     Click the 'Select file' button, and then choose 'Add file' to add the file you want to upload. Note, that you'll be able
     to choose only .netCDF or .zip files, both types need to follow the standard described
-    <a target="_blank" [routerLink]="['/user-data-guidelines']">here.</a>
+    <a target="_blank" [routerLink]="['/user-data-guidelines']">here.</a> If the .zip file you are trying to upload contains
+    other types of files than .netCDF, .csv or .yml, you will not be able to upload the file. Please note, that you have <b> 5GB </b>
+    space available for your files. In case you need more, please contact our team.
   </p>
   <div>
     <img alt="select-file" class="scaled_image p-mb-3" [src]="uploadFileWindow">
@@ -648,13 +648,15 @@
   </div>
   <p>
     When the file gets uploaded and preprocessed, there will show up a row with basic information on the uploaded file.
-    You'll be able to change the dataset's name, the version's name and choose a different variable, if the default one is inproper.
+    You'll be able to change the dataset's name, the version's name and choose a different variable, if the default one
+    is inproper or we were not able to retrieve the proper name.
     By clicking 'Remove dataset' button, you will remove the uploaded file. Note, that removing is possible only if the uploaded data
     hasn't been used for any validation.
   </p>
   <div>
     <img alt="select-file" class="scaled_image p-mb-3" style="scale: 1.2" [src]="dataRow">
   </div>
+
   <p>If you want to use your dataset in a validation, simply go to the Validate page and expand the dataset dropdown list. Your dataset will be there.</p>
   <div>
     <img alt="select-file" class="scaled_image p-mb-3" style="scale: 0.9" [src]="userDataOnTheList">
