--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -60,7 +60,7 @@
             <div [ngClass]="{'p-col-6': true}">
               <span class="p-float-label p-mb-4">
                 <p-dropdown id="metricSelector"
-                            (onChange)="onMetricChange()"
+                            (onChange)="onMetricChange($event)"
                             [options]="metrics"
                             [(ngModel)]="selectedMetrics"
                             optionLabel="metric_pretty_name"
