--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -7,7 +7,7 @@
     <h5 class="p-my-0"> Upload date: {{userDataset.upload_date| date: dateFormat :timeZone}} UTC
     </h5>
   </ng-template>
-  <div class="p-grid p-mx-0 p-px-0 p-my-0" [style]="{height: '100%'}">
+  <div class="p-grid p-mx-0 p-px-0 p-my-0" *ngIf="userDataset.metadata_submitted" [style]="{height: '100%'}">
     <!--    dataset -->
     <div class="p-col-5">
       <div><strong>Dataset: </strong></div>
@@ -94,7 +94,8 @@
         'You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation will not be possible.' :
         'We could not retrieve the applicable soil moisture variable name. Please choose the proper one from the list. A validation will fail if no proper variable is set.'}}"
       >
-        Variable: <b>{{(variableName.shortName$|async)}} ({{variableName.prettyName$|async}}) [{{variableName.unit$|async}}] </b>
+        Variable: <b>{{(variableName.shortName$|async)}} ({{variableName.prettyName$|async}}
+        ) [{{variableName.unit$|async}}] </b>
         <span class="pi pi-question-circle small-edit-icon"></span>
         </span>
       <div *ngIf="(editVariable.opened)">
@@ -126,13 +127,13 @@
     <div class="p-col-5 p-fluid" [style]="{height: '100%'}">
       <div><strong>Validation list: </strong></div>
       <p-scrollPanel *ngIf="userDataset.validation_list.length > 0" [style]="{width: '80%', height: '80%'}">
-              <div *ngFor="let validation of userDataset.validation_list; index as ind">
-                 {{ind + 1}}) <a routerLink="/validation-result/{{validation.val_id}}"
-                     pTooltip="View validation">{{validation.val_name}}</a>
-              </div>
+        <div *ngFor="let validation of userDataset.validation_list; index as ind">
+          {{ind + 1}}) <a routerLink="/validation-result/{{validation.val_id}}"
+                          pTooltip="View validation">{{validation.val_name}}</a>
+        </div>
       </p-scrollPanel>
-      <div id="no-validation-box" *ngIf="userDataset.validation_list.length == 0">
-       <em> No validation has been run with this data </em>
+      <div class="no-validation-box" *ngIf="userDataset.validation_list.length == 0">
+        <em> No validation has been run with this data </em>
       </div>
     </div>
     <!-- actions   -->
@@ -152,6 +153,9 @@
         </button>
       </div>
     </div>
+  </div>
+  <div class="p-grid p-mx-0 p-px-0 p-my-0 no-validation-box" *ngIf="!userDataset.metadata_submitted" [style]="{height: '100%'}">
+     <h4> <span class="pi pi-spin pi-spinner" style="font-size: 2rem"></span><em> Your file is still being preprocessed. </em> </h4>
   </div>
 
 </p-panel>
