--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -120,12 +120,12 @@
         </div>
       </div>
       <div >
-        <img class="scaled_image"
-             [src]="workflowDiagram[0].plot"
-             (click)="showGallery(0, workflowDiagram)"
-             [alt]="workflowDiagram[0].description"
-             id="workflow"
-             style="max-width: 80%">
+<!--        <img class="scaled_image"-->
+<!--             [src]="workflowDiagram[0].plot"-->
+<!--             (click)="showGallery(0, workflowDiagram)"-->
+<!--             [alt]="workflowDiagram[0].description"-->
+<!--             id="workflow"-->
+<!--             style="max-width: 80%">-->
       </div>
     </div>
   </div>
@@ -141,10 +141,10 @@
         </p>
 
         <div>
-          <img class="scaled_image img-screen"
-               [src]="cardValidate[0].plot"
-               (click)="showGallery(0, cardValidate)"
-               [alt]="cardValidate[0].description">
+<!--          <img class="scaled_image img-screen"-->
+<!--               [src]="cardValidate[0].plot"-->
+<!--               (click)="showGallery(0, cardValidate)"-->
+<!--               [alt]="cardValidate[0].description">-->
         </div>
       </div>
 
@@ -154,11 +154,11 @@
           Provides a list of all validation results
         </p>
         <div>
-          <img
-               class="scaled_image img-screen"
-               [src]="cardValidateResult[0].plot"
-               (click)="showGallery(0, cardValidateResult)"
-               [alt]="cardValidateResult[0].description">
+<!--          <img-->
+<!--               class="scaled_image img-screen"-->
+<!--               [src]="cardValidateResult[0].plot"-->
+<!--               (click)="showGallery(0, cardValidateResult)"-->
+<!--               [alt]="cardValidateResult[0].description">-->
         </div>
       </div>
 
@@ -168,11 +168,11 @@
           Allows download of validation results in netCDF format and as graphics
         </p>
         <div>
-          <img
-               class="scaled_image img-screen"
-               [src]="cardValidateDetails[0].plot"
-               (click)="showGallery(0, cardValidateDetails)"
-               [alt]="cardValidateDetails[0].description">
+<!--          <img-->
+<!--               class="scaled_image img-screen"-->
+<!--               [src]="cardValidateDetails[0].plot"-->
+<!--               (click)="showGallery(0, cardValidateDetails)"-->
+<!--               [alt]="cardValidateDetails[0].description">-->
         </div>
       </div>
     </div>
