--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -55,12 +55,12 @@
           </div>
           <div class="p-grid center p-py-0">
             <div class='p-col'>
-              <img width="95%"
-                   height="95%"
-                   [src]=sanitizePlotUrl(img)
-                   [ngClass]="{'result-plot':true, 'pcol6': true}"
-                   (click)="showImage(img)"
-                   alt="An overview of the selected comparison extent">
+<!--              <img width="95%"-->
+<!--                   height="95%"-->
+<!--                   [src]=sanitizePlotUrl(img)-->
+<!--                   [ngClass]="{'result-plot':true, 'pcol6': true}"-->
+<!--                   (click)="showImage(img)"-->
+<!--                   alt="An overview of the selected comparison extent">-->
             </div>
           </div>
         </div>
